# dirac

./: .gitignore  Cargo.toml  README.md
benches/: dirac_notation.rs
lib/dirac/: Cargo.toml
lib/dirac/src/: codegen.rs  expression.rs  lib.rs  main.rs  tests.rs
lib/dirac/src/parser/: mod.rs  whitespace.rs
lib/tensor/: Cargo.toml
lib/tensor/src/: lib.rs
src/: main.rs
