[package]
name = "q30d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"]}

[dependencies]
num = "0.4.0"
dirac = { path = "lib/dirac", version="0.1.0" }
tensor = { path = "lib/tensor", version="0.1.0" }

[workspace]
members = ["lib/tensor", "lib/dirac"]

[[bench]]
name = "dirac_notation"
harness = false
